--- a/styles/admin.css
+++ b/styles/admin.css
@@ -10,6 +10,15 @@ body {
     background-color: #f4f4f4;
   }
   
+  .view-product {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    padding-top: 80px;
+    list-style-type: none;
+  }
+
   /* Encabezado */
   .container > h1 {
     text-align: center;
