--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel de Administrador</title>
-  <link rel="stylesheet" href="../styles/admin.css">
+  <link rel="stylesheet" href="/styles/admin.css">
+  
 </head>
 <body>
   <header>
@@ -15,17 +16,17 @@
       <nav class="navbar">
         <ul>
           <li><a href="inicio.html">Inicio</a></li>
-          <li><a href="./categorias/mujer.html">Mujer</a></li>
-          <li><a href="./categorias/hombre.html">Hombre</a></li>
-          <li><a href="./categorias/nina.html">Niña</a></li>
-          <li><a href="./categorias/nino.html">Niño</a></li>
-          <li><a href="./categorias/unisex.html">Unisex</a></li>
-          <li><a href="./categorias/mascotas.html">Mascotas</a></li>
+          <li><a href="/templates/categories/mujer.html">Mujer</a></li>
+          <li><a href="/templates/categories/hombre.html">Hombre</a></li>
+          <li><a href="/templates/categories/nina.html">Niña</a></li>
+          <li><a href="/templates/categories/nino.html">Niño</a></li>
+          <li><a href="/templates/categories/unisex.html">Unisex</a></li>
+          <li><a href="/templates/categories/mascotas.html">Mascotas</a></li>
         </ul>
       </nav>
       <div class="header-icons">
         <a href="../login.html" class="login"><i class="fas fa-user"></i></a>
-        <a href="./carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
+        <a href="/templates/categories/carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
         <a href="./admin.html" class="options-icon"><i class="fas fa-cog"></i></a>
       </div>
     </div>
