--- a/templates/categories/hombre.html
+++ b/templates/categories/hombre.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Bolsos</title>
-    <link rel="stylesheet" href="/styles/inicio.css">
+    <title>Catálogo de Bolsos para Hombre</title>
+    <link rel="stylesheet" href="/styles/cat.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -12,47 +12,80 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="/resources/img/logo.png" alt="Logo de la tienda" class="logo">
+                <a href="/templates/inicio.html">
+                    <img src="/resources/img/logo.png" alt="Logo de la tienda" class="logo">
+                </a>
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/templates/categories/mujer.html">MUJER</a></li>
-                    <li><a href="/templates/categories/hombre.html">HOMBRE</a></li>
-                    <li><a href="/templates/categories/nina.html">NIÑA</a></li>
-                    <li><a href="/templates/categories/nino.html">NIÑO</a></li>
-                    <li><a href="/templates/categories/unisex.html">UNISEX</a></li>
-                    <li><a href="/templates/categories/mascotas.html">MASCOTAS</a></li>
+                    <li><a href="mujer.html">MUJER</a></li>
+                    <li><a href="hombre.html">HOMBRE</a></li>
+                    <li><a href="nina.html">NIÑA</a></li>
+                    <li><a href="nino.html">NIÑO</a></li>
+                    <li><a href="unisex.html">UNISEX</a></li>
+                    <li><a href="mascotas.html">MASCOTAS</a></li>
                 </ul>
             </nav>
             <div class="header-icons">
-                <a href="//index.html" class="login"><i class="fas fa-user"></i></a>
-                <a href="/templates/categories/carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
+                <a href="/index.html" class="login"><i class="fas fa-user"></i></a>
+                <a href="./templates/categories/carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
                 <a href="/templates/admin.html" class="options-icon"><i class="fas fa-cog"></i></a>
             </div>
         </div>
     </header>
 
     <div class="main-content">
-       
-        <ul class="product" id="products-list"></ul>
+        <section class="featured-products">
+            <div class="container">
+                <h2 class="h2-view">Bolsos para Hombre</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 1', 'Sumérgete en la elegancia de nuestro bolso.', '$150.000', '/styles/bolsohombre1.jpg')">
+                            <img src="/resources/img/bolsohombre1.jpg" alt="Producto 1">
+                            <h3>Caballero 1</h3>
+                            <p>$150.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 2', 'Sumérgete en la elegancia de nuestro bolso.', '$130.000', '/resources/img/bolsohombre2.jpg')">
+                            <img src="/resources/img/bolsohombre2.jpg" alt="Producto 2">
+                            <h3>Caballero 2</h3>
+                            <p>$130.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 3', 'Sumérgete en la elegancia de nuestro bolso.', '$140.000', '/resources/img/bolsohombre3.jpeg')">
+                            <img src="/resources/img/bolsohombre3.jpeg" alt="Producto 3">
+                            <h3>Caballero 3</h3>
+                            <p>$140.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 4', 'Sumérgete en la elegancia de nuestro bolso.', '$120.000', '/resources/img/bolsohombre4.avif')">
+                            <img src="/resources/img/bolsohombre4.avif" alt="Producto 4">
+                            <h3>Caballero 4</h3>
+                            <p>$120.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 5', 'Sumérgete en la elegancia de nuestro bolso.', '$125.000', '/resources/img/bolsohombre5.png')">
+                            <img src="/resources/img/bolsohombre5.png" alt="Producto 5">
+                            <h3>Caballero 5</h3>
+                            <p>$150.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Caballero 6', 'Sumérgete en la elegancia de nuestro bolso.', '$115.000', '/resources/img/bolsohombre6.jpeg')">
+                            <img src="/resources/img/bolsohombre6.jpeg" alt="Producto 6">
+                            <h3>Caballero 6</h3>
+                            <p>$115.000</p>
+                        </div>
+                    </div>
+                    <!-- Más productos aquí -->
+                </div>
+            </div>
+        </section>
     </div>
-
-    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators" id="carousel-indicators">
-            
-        </ol>
-        <div class="carousel-inner" id="carousel-inner">
-            
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Siguiente</span>
-        </a>
-    </div> -->
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -99,10 +132,6 @@
             <span class="sr-only">Siguiente</span>
         </a>
     </div>
-    
-    
-
-    
 
     <!-- Modal de Bootstrap -->
     <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
@@ -124,7 +153,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button id="addToCartBtn" type="button" class="btn btn-primary">Agregar al carrito</button>
+                    <button type="button" class="btn btn-primary" onclick="addToCart()">Agregar al carrito</button>
                 </div>
             </div>
         </div>
@@ -148,10 +177,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../controllers/script.js" type="module"></script>
-    <script src="/controllers/carousel.js" type="module"></script>
-    
-    
+    <script src="../controllers/script.js"></script>
     <script>
         // Función para mostrar los detalles del producto en un modal
         function showProductDetails(title, description, price, imgSrc) {
@@ -166,13 +192,6 @@
 
             // Abre el modal
             $('#productModal').modal('show');
-        }
-    </script>
-    <script type="module" src="/controllers/carrito.js"></script>
-    <script>
-        function addToCartFromInicio(nombre, precio, cantidad) {
-            // Llama a la función addToCart definida en carrito.js
-            addToCart(nombre, precio, cantidad);
         }
     </script>
 </body>
