--- a/templates/categories/nino.html
+++ b/templates/categories/nino.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Bolsos</title>
-    <link rel="stylesheet" href="/styles/inicio.css">
+    <title>Catálogo de Bolsos para Niño</title>
+    <link rel="stylesheet" href="/styles/cat.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -12,47 +12,80 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="/resources/img/logo.png" alt="Logo de la tienda" class="logo">
+                <a href="/templates/inicio.html">
+                    <img src="/resources/img/logo.png" alt="Logo de la tienda" class="logo">
+                </a>
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/templates/categories/mujer.html">MUJER</a></li>
-                    <li><a href="/templates/categories/hombre.html">HOMBRE</a></li>
-                    <li><a href="/templates/categories/nina.html">NIÑA</a></li>
-                    <li><a href="/templates/categories/nino.html">NIÑO</a></li>
-                    <li><a href="/templates/categories/unisex.html">UNISEX</a></li>
-                    <li><a href="/templates/categories/mascotas.html">MASCOTAS</a></li>
+                    <li><a href="mujer.html">MUJER</a></li>
+                    <li><a href="hombre.html">HOMBRE</a></li>
+                    <li><a href="nina.html">NIÑA</a></li>
+                    <li><a href="nino.html">NIÑO</a></li>
+                    <li><a href="unisex.html">UNISEX</a></li>
+                    <li><a href="mascotas.html">MASCOTAS</a></li>
                 </ul>
             </nav>
             <div class="header-icons">
                 <a href="//index.html" class="login"><i class="fas fa-user"></i></a>
-                <a href="/templates/categories/carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
+                <a href="./templates/categories/carrito.html" class="cart"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
                 <a href="/templates/admin.html" class="options-icon"><i class="fas fa-cog"></i></a>
             </div>
         </div>
     </header>
 
     <div class="main-content">
-       
-        <ul class="product" id="products-list"></ul>
+        <section class="featured-products">
+            <div class="container">
+                <h2 class="h2-view">Bolsos para Niño</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 1', 'Sumérgete en lo divertido de nuestro bolso.', '$80.000', '/resources/img/bolsonino1.webp')">
+                            <img src="/resources/img/bolsonino1.webp" alt="Producto 1">
+                            <h3>Bolso Niño 1</h3>
+                            <p>$80.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 2', 'Sumérgete en lo divertido de nuestro bolso.', '$70.000', '/resources/img/bolsonino2.webp')">
+                            <img src="/resources/img/bolsonino2.webp" alt="Producto 2">
+                            <h3>Bolso Niño 2</h3>
+                            <p>$70.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 3', 'Sumérgete en lo divertido de nuestro bolso.', '$60.000', '/resources/img/bolsonino3.jpg')">
+                            <img src="/resources/img/bolsonino3.jpeg" alt="Producto 3">
+                            <h3>Bolso Niño 3</h3>
+                            <p>$60.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 4', 'Sumérgete en lo divertido de nuestro bolso.', '$90.000', '/resources/img/bolsonino4.jpg')">
+                            <img src="/resources/img/bolsonino4.jpg" alt="Producto 4">
+                            <h3>Bolso Niño 4</h3>
+                            <p>$90.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 5', 'Sumérgete en lo divertido de nuestro bolso.', '$75.000', '/resources/img/bolsonino5.webp')">
+                            <img src="/resources/img/bolsonino5.webp" alt="Producto 5">
+                            <h3>Bolso Niño 5</h3>
+                            <p>$75.000</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product" onclick="showProductDetails('Bolso Niño 6', 'Sumérgete en lo divertido de nuestro bolso.', '$85.000', '/resources/img/bolsonino6.jpeg')">
+                            <img src="/resources/img/bolsonino6.jpeg" alt="Producto 6">
+                            <h3>Bolso Niño 6</h3>
+                            <p>$85.000</p>
+                        </div>
+                    </div>
+                    <!-- Más productos aquí -->
+                </div>
+            </div>
+        </section>
     </div>
-
-    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators" id="carousel-indicators">
-            
-        </ol>
-        <div class="carousel-inner" id="carousel-inner">
-            
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Siguiente</span>
-        </a>
-    </div> -->
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -63,32 +96,29 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            
         </ol>
         <div class="carousel-inner">
             <!-- Aquí se añadirán las imágenes del carrusel -->
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/resources/img/bolsohombre1.jpg" alt="First slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino1.webp" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/bolsohombre5.png" alt="Second slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino2.webp" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/bolsohombre6.jpeg" alt="Third slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino3.jpeg" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/bolsomujer3.jpeg" alt="Second slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino4.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/bolsonino2.webp" alt="Third slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino5.webp" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/producto3.webp" alt="Second slide">
+                <img class="d-block w-100" src="/resources/img/bolsonino6.jpeg" alt="Second slide">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="/resources/img/bolsonino4.jpg" alt="Third slide">
-            </div>
+            
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -99,10 +129,6 @@
             <span class="sr-only">Siguiente</span>
         </a>
     </div>
-    
-    
-
-    
 
     <!-- Modal de Bootstrap -->
     <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
@@ -124,7 +150,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button id="addToCartBtn" type="button" class="btn btn-primary">Agregar al carrito</button>
+                    <button type="button" class="btn btn-primary" onclick="addToCart()">Agregar al carrito</button>
                 </div>
             </div>
         </div>
@@ -148,10 +174,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../controllers/script.js" type="module"></script>
-    <script src="/controllers/carousel.js" type="module"></script>
-    
-    
+    <script src="../controllers/script.js"></script>
     <script>
         // Función para mostrar los detalles del producto en un modal
         function showProductDetails(title, description, price, imgSrc) {
@@ -166,13 +189,6 @@
 
             // Abre el modal
             $('#productModal').modal('show');
-        }
-    </script>
-    <script type="module" src="/controllers/carrito.js"></script>
-    <script>
-        function addToCartFromInicio(nombre, precio, cantidad) {
-            // Llama a la función addToCart definida en carrito.js
-            addToCart(nombre, precio, cantidad);
         }
     </script>
 </body>
